--- a/AnimalSpotter/Base.lproj/Main.storyboard
+++ b/AnimalSpotter/Base.lproj/Main.storyboard
@@ -27,6 +27,9 @@
                                             <segment title="Sign Up"/>
                                             <segment title="Sign In"/>
                                         </segments>
+                                        <connections>
+                                            <action selector="signInTypeChanged:" destination="fYv-hU-wkc" eventType="valueChanged" id="TnY-Yc-XZD"/>
+                                        </connections>
                                     </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qpz-u1-zcQ">
                                         <rect key="frame" x="0.0" y="41" width="382" height="30"/>
@@ -47,6 +50,9 @@
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" title="Sign Up"/>
+                                        <connections>
+                                            <action selector="buttonTapped:" destination="fYv-hU-wkc" eventType="touchUpOutside" id="vqj-EJ-1oD"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -64,6 +70,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HCO-4c-Ipd"/>
                     </view>
+                    <connections>
+                        <outlet property="loginTypeSegmentedControl" destination="aW1-IY-ebQ" id="cLR-Rj-95J"/>
+                        <outlet property="passwordTextField" destination="Vga-nG-cJ8" id="gPS-DY-j1X"/>
+                        <outlet property="signInButton" destination="l8d-j0-sqF" id="vRE-F0-Pld"/>
+                        <outlet property="usernameTextField" destination="qpz-u1-zcQ" id="yMc-9N-TRM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cdi-kT-dVo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -94,6 +106,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="ywE-y5-fp0" kind="show" identifier="ShowAnimalDetailSegue" id="XTV-Eb-0eK"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -101,7 +116,13 @@
                             <outlet property="delegate" destination="9JZ-Ly-aCa" id="1eI-Hp-Xac"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Animal Spotter" id="Sv5-lB-j6L"/>
+                    <navigationItem key="navigationItem" title="Animal Spotter" id="Sv5-lB-j6L">
+                        <barButtonItem key="rightBarButtonItem" title="Get Animals" id="mcp-ak-ggX">
+                            <connections>
+                                <action selector="getAnimals:" destination="9JZ-Ly-aCa" id="HhK-SI-5DA"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="fYv-hU-wkc" kind="presentation" identifier="LoginViewModalSegue" id="Tc6-TK-qmq"/>
                     </connections>
@@ -109,6 +130,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KAK-9d-Sq1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1189.8550724637682" y="732.58928571428567"/>
+        </scene>
+        <!--Animal Detail View Controller-->
+        <scene sceneID="p07-rl-OUX">
+            <objects>
+                <viewController id="ywE-y5-fp0" customClass="AnimalDetailViewController" customModule="AnimalSpotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="k64-2p-B1H">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date/Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T9y-UT-hVY">
+                                <rect key="frame" x="167" y="166" width="80" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lat/Long" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hln-X2-ZLV">
+                                <rect key="frame" x="173" y="220" width="68" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGa-Iw-l7H">
+                                <rect key="frame" x="163" y="283" width="88" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VmV-zJ-jXC">
+                                <rect key="frame" x="41" y="384" width="332" height="332"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="VmV-zJ-jXC" secondAttribute="height" multiplier="1:1" id="t4R-tj-tgE"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="T9y-UT-hVY" firstAttribute="top" secondItem="uJT-jR-kPR" secondAttribute="top" constant="26" id="3LF-t9-2el"/>
+                            <constraint firstItem="mGa-Iw-l7H" firstAttribute="centerX" secondItem="k64-2p-B1H" secondAttribute="centerX" id="9br-Mv-zo4"/>
+                            <constraint firstItem="VmV-zJ-jXC" firstAttribute="width" secondItem="k64-2p-B1H" secondAttribute="width" multiplier="0.8" constant="0.80000000000000004" id="MQV-f7-qeh"/>
+                            <constraint firstItem="mGa-Iw-l7H" firstAttribute="top" secondItem="hln-X2-ZLV" secondAttribute="bottom" constant="42" id="Uxk-Sc-zxy"/>
+                            <constraint firstItem="VmV-zJ-jXC" firstAttribute="centerX" secondItem="k64-2p-B1H" secondAttribute="centerX" id="hVc-2O-1Fh"/>
+                            <constraint firstItem="VmV-zJ-jXC" firstAttribute="top" secondItem="mGa-Iw-l7H" secondAttribute="bottom" constant="80" id="itv-D6-cSb"/>
+                            <constraint firstItem="hln-X2-ZLV" firstAttribute="top" secondItem="T9y-UT-hVY" secondAttribute="bottom" constant="33" id="kZg-0G-v6d"/>
+                            <constraint firstItem="hln-X2-ZLV" firstAttribute="centerX" secondItem="k64-2p-B1H" secondAttribute="centerX" id="rHa-ET-Gtv"/>
+                            <constraint firstItem="T9y-UT-hVY" firstAttribute="centerX" secondItem="k64-2p-B1H" secondAttribute="centerX" id="vqs-Rl-8NG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uJT-jR-kPR"/>
+                    </view>
+                    <connections>
+                        <outlet property="animalImageView" destination="VmV-zJ-jXC" id="ubd-v1-wKG"/>
+                        <outlet property="coordinatesLabel" destination="hln-X2-ZLV" id="EaN-Gn-bXJ"/>
+                        <outlet property="descriptionLabel" destination="mGa-Iw-l7H" id="ike-fr-SmA"/>
+                        <outlet property="timeSeenLabel" destination="T9y-UT-hVY" id="P3n-V5-S1a"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6t1-u4-2o4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2134" y="794"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6vh-Yx-OZ4">
@@ -129,4 +208,5 @@
             <point key="canvasLocation" x="279.71014492753625" y="732.58928571428567"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.63267713620217148" green="0.4978738748556385" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
